src/test/deca/context/invalid/class/class_decl/int.deca
// Description:
//    Déclaration d'une classe int
//
// Resultats:
//    Double définition of int
// 
// Historique:
//    cree le 01/01/2016

class int {

}

{

}
